--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - uses: dtolnay/rust-toolchain@nightly
-    - name: Build
-      run: cargo build --verbose
+    - name: Build crate
+      run: cargo build
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test -p dune-core -p dune-cli -p dune-mpf
