--- a/dune-mpf/Cargo.toml
+++ b/dune-mpf/Cargo.toml
@@ -14,6 +14,9 @@ serde = { version = "1.0.210", features = ["derive", "serde_derive"] }
 toml = "0.8.19"
 pyo3 = "0.23.0"
 serde_json = "1.0.133"
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
+pyo3-log = "0.12.1"
 
 [lints]
 workspace = true
