--- a/dune-mpf/Cargo.toml
+++ b/dune-mpf/Cargo.toml
@@ -17,6 +17,7 @@ serde_json = "1.0.133"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 pyo3-log = "0.12.1"
+tracing-appender = "0.2.3"
 
 [lints]
 workspace = true
