python bindings: Move dependencies from dune_mpf to dune

--- a/dune-mpf/python/pyproject.toml
+++ b/dune-mpf/python/pyproject.toml
@@ -1,6 +1,11 @@
 [project]
 name = "dune"
 version = "0.1.0"
+dependencies = [
+  "mpf @ git+https://github.com/mpiraux/mpf",
+  "pytoml",
+  "pyyaml"
+]
 
 [build-system]
 requires = ["setuptools >= 61.0"]
