--- a/dune-core/Cargo.toml
+++ b/dune-core/Cargo.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-core_affinity = "0.8.1"
 futures = "0.3.31"
 graphrs = "0.9.0"
 ipnetwork = "0.20.0"
@@ -22,3 +21,4 @@ tokio = { version = "1.43.0", features = ["full", "macros", "net", "rt"] }
 log = "0.4.25"
 tracing-subscriber = "0.3.19"
 tracing-appender = "0.2.3"
+affinity = "0.1.2"
