--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Tests
 
 on:
   push:
@@ -13,6 +13,11 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+
+    strategy:
+      fail-fast: false
+      matrix:
+        python_version: ["3.11", "3.12", "3.13"]
 
     steps:
     - uses: actions/checkout@v4
